--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Calendario de Visitas - Open Gate</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        input[type="date"], input[type="text"] {
+            @apply border-gray-300 rounded-md shadow-sm;
+        }
+        input[type="checkbox"] {
+            @apply rounded border-gray-300;
+        }
+        .modal-open {
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body class="bg-gray-50">
     <nav class="bg-white shadow-sm">
