--- a/index.html
+++ b/index.html
@@ -271,6 +271,6 @@
     <!-- Notifications -->
     <div id="notificationContainer" class="fixed bottom-4 right-4 space-y-2"></div>
 
-    <script src="script.js"></script>
+    <script src="script_updated.js"></script>
 </body>
 </html>
