Add index.html 1745266967827

--- a/index.html
+++ b/index.html
@@ -41,6 +41,18 @@
                     <h1 class="text-xl font-semibold text-gray-800">Dashboard de Licencias Microsoft</h1>
                 </div>
                 <div class="flex items-center">
+                    <a href="index.html" class="flex items-center bg-blue-100 text-blue-700 px-4 py-2 rounded-lg mr-3">
+                        <i class="fas fa-tachometer-alt mr-2"></i>
+                        Dashboard
+                    </a>
+                    <a href="detailed-view.html" class="flex items-center text-gray-600 hover:text-gray-800 px-4 py-2 mr-3">
+                        <i class="fas fa-list-alt mr-2"></i>
+                        Vista Detallada
+                    </a>
+                    <a href="catalogs.html" class="flex items-center text-gray-600 hover:text-gray-800 px-4 py-2 mr-3">
+                        <i class="fas fa-tags mr-2"></i>
+                        Catálogos
+                    </a>
                     <button id="syncButton" class="flex items-center bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg mr-3">
                         <i class="fas fa-sync-alt mr-2"></i>
                         Sincronizar
